package com.example.sixthsenseapp;

public class LoginActivityEspressoTest
{
    /*@Rule
    public ActivityTestRule<LoginActivity> lActivityTestRule = new ActivityTestRule<LoginActivity>(LoginActivity.class);
    private String username = "tyler_boyd1@yahoo.co.nz";
    //private String password = "";
    @Before
    public void setUp() throws Exception
    {

    }

    @Test
    public void testLoginScenario()
    {
        //Input name and password
        Espresso.onView(withId(R.id.emailField)).perform(typeText(username),closeSoftKeyboard());
        //Espresso.onView(withId(R.id.passwordField)).perform(typeText(password),closeSoftKeyboard());


        //click enter
        Espresso.onView(withId(R.id.loginButton)).perform(click());

        //Verification
        //Espresso.onView(withText("Successfully Logged in.")).check(ViewAssertions.matches(isDisplayed()));
    }

    @After
    public void tearDown() throws Exception
    {

    }*/
}